--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #74ebd5;
-$secondary-color: #ACB6E5;
+$primary-color: #b565a7;
+$secondary-color: #7b7293;
 
 $white-color: #fff;
 
